--- a/crates/env_loader/Cargo.toml
+++ b/crates/env_loader/Cargo.toml
@@ -19,3 +19,4 @@ env = { workspace = true }
 eyre = { workspace = true }
 system_traits = { workspace = true, features = ["memory-sync"] }
 strum = { workspace = true }
+mockall = { workspace = true }
