--- a/cli/omni/Cargo.toml
+++ b/cli/omni/Cargo.toml
@@ -2,7 +2,6 @@
 name = "omni"
 rust-version.workspace = true
 edition.workspace = true
-# edition = "2024"
 version.workspace = true
 authors.workspace = true
 repository.workspace = true
@@ -12,8 +11,8 @@ default = ["enable-tracing"]
 enable-tracing = [
     "trace/enabled",
     "dep:tracing",
+    "dep:tracing-core",
     "dep:tracing-subscriber",
-    "dep:tracing-log",
 ]
 
 [dependencies]
@@ -27,11 +26,9 @@ tokio = { workspace = true }
 futures = { workspace = true }
 trace = { workspace = true, optional = true }
 tracing = { workspace = true, optional = true }
+tracing-core = { workspace = true, optional = true }
 tracing-subscriber = { workspace = true, optional = true }
-tracing-log = { workspace = true, optional = true }
-env = { workspace = true }
 omni_types = { workspace = true }
-env_loader = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 serde_yml = { workspace = true }
@@ -58,9 +55,9 @@ petgraph = { workspace = true }
 thiserror = { workspace = true }
 defer = { workspace = true }
 strum = { workspace = true }
-log = { workspace = true }
-env_logger = { workspace = true }
 garde = { workspace = true }
+env_loader = { workspace = true }
+env = { workspace = true }
 
 [build-dependencies]
 shadow-rs = { workspace = true, features = ["default"] }
