feat: create crates for global maps and sets implementation

--- a/crates/config_utils/Cargo.toml
+++ b/crates/config_utils/Cargo.toml
@@ -19,3 +19,5 @@ merge = { workspace = true }
 strum = { workspace = true }
 derive_more = { workspace = true }
 garde = { workspace = true, optional = true }
+maps = { workspace = true }
+sets = { workspace = true }
