--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ thiserror = "^2.0.12"
 eyre = "^0.6.12"
 time = { version = "^0.3.41", features = [] }
 derive_more = { version = "^2.0.1", features = ["full"] }
+derive-new = { version = "^0.7.0" }
 strum = { version = "^0.27.1", features = ["derive"] }
 merge = { version = "0.2.0" }
 tokio = { version = "^1.46.1", features = [
@@ -72,7 +73,7 @@ clap_complete = { version = "^4.5.55" }
 globset = { version = "^0.4" }
 shadow-rs = { version = "^1.2.0", default-features = false }
 convert_case = { version = "^0.8.0" }
-schemars = { version = "^1.0.4" }
+schemars = { version = "^1.0.4", features = ["indexmap2"] }
 walkdir = { version = "^2.5.0" }
 serde_yml = { version = "^0.0.12" }
 ignore = { version = "^0.4.23" }
@@ -104,6 +105,12 @@ bytes = { version = "^1.10.1" }
 byteorder = { version = "^1.5.0" }
 rust-embed = { version = "8.7.2" }
 garde = { version = "^0.22.0", features = ["full"] }
+os_pipe = { version = "^1.2.2" }
+indexmap = { version = "^2.10.0", features = ["serde", "rayon"] }
+dashmap = { version = "^6.1.0", features = ["serde", "rayon"] }
+ahash = { version = "^0.8.12" }
+maps = { path = "./crates/maps" }
+sets = { path = "./crates/sets" }
 
 [profile.release]
 incremental = true
