--- a/crates/sets/project.omni.yaml
+++ b/crates/sets/project.omni.yaml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=../../artifacts/json-schemas/project.json
-name: config_utils
+name: sets
 
 extends:
   - ${WORKSPACE_DIR}/omni/presets/rust-lib.omni.yaml
