feat: global maps and sets in config_utils, env, and env_loader

--- a/crates/env_loader/Cargo.toml
+++ b/crates/env_loader/Cargo.toml
@@ -20,3 +20,4 @@ eyre = { workspace = true }
 system_traits = { workspace = true, features = ["memory-sync"] }
 strum = { workspace = true }
 mockall = { workspace = true }
+maps = { workspace = true }
