--- a/crates/omni_core/project.omni.yaml
+++ b/crates/omni_core/project.omni.yaml
@@ -1,5 +1,4 @@
 # yaml-language-server: $schema=../../artifacts/json-schemas/project.json
 name: omni_core
-
-tasks:
-  test: cargo test -p omni_core
+extends:
+  - ${WORKSPACE_DIR}/omni/presets/rust-lib.omni.yaml
