--- a/Cargo.toml
+++ b/Cargo.toml
@@ -111,6 +111,7 @@ dashmap = { version = "^6.1.0", features = ["serde", "rayon"] }
 ahash = { version = "^0.8.12" }
 maps = { path = "./crates/maps" }
 sets = { path = "./crates/sets" }
+globwalk = { version = "^0.9.1" }
 
 [profile.release]
 incremental = true
