--- a/crates/bridge_rpc/project.omni.yaml
+++ b/crates/bridge_rpc/project.omni.yaml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=../../artifacts/json-schemas/project.json
 name: bridge_rpc
 
-tasks:
-  test: cargo test -p bridge_rpc
+extends:
+  - ${WORKSPACE_DIR}/omni/presets/rust-lib.omni.yaml
