--- a/crates/env/Cargo.toml
+++ b/crates/env/Cargo.toml
@@ -12,3 +12,5 @@ derive_more = { workspace = true }
 thiserror = { workspace = true }
 convert_case = { workspace = true }
 strum = { workspace = true }
+maps = { workspace = true }
+derive-new = { workspace = true }
