--- a/crates/env/project.omni.yaml
+++ b/crates/env/project.omni.yaml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=../../artifacts/json-schemas/project.json
 name: env
 
-tasks:
-  test: cargo test -p env
+extends:
+  - ${WORKSPACE_DIR}/omni/presets/rust-lib.omni.yaml
