--- a/crates/env_loader/project.omni.yaml
+++ b/crates/env_loader/project.omni.yaml
@@ -1,8 +1,8 @@
 # yaml-language-server: $schema=../../artifacts/json-schemas/project.json
 name: env_loader
 
-tasks:
-  test: cargo test -p env_loader
+extends:
+  - ${WORKSPACE_DIR}/omni/presets/rust-lib.omni.yaml
 
 dependencies:
   - env
