feat: improve env parser performance by 99%

--- a/crates/env/Cargo.toml
+++ b/crates/env/Cargo.toml
@@ -7,6 +7,14 @@ version.workspace = true
 authors.workspace = true
 repository.workspace = true
 
+[features]
+dhat-heap = ["dep:dhat"]
+
+[[bench]]
+path = "./benches/env_benchmarks.rs"
+name = "env_benchmarks"
+harness = false
+
 [dependencies]
 derive_more = { workspace = true }
 thiserror = { workspace = true }
@@ -14,3 +22,7 @@ convert_case = { workspace = true }
 strum = { workspace = true }
 maps = { workspace = true }
 derive-new = { workspace = true }
+dhat = { workspace = true, optional = true }
+
+[dev-dependencies]
+criterion = { workspace = true }
