--- a/crates/env/project.omni.yaml
+++ b/crates/env/project.omni.yaml
@@ -5,4 +5,8 @@ extends:
   - ${WORKSPACE_DIR}/omni/presets/rust-lib.omni.yaml
 
 tasks:
-  profile: cargo flamegraph --features=${features:-dhat-heap} --profile=${profile:-bench-with-debug} --bench ${bench:-env_benchmarks} -p ${PROJECT_NAME} -- --bench --profile-time=${profile_time:-5}
+  profile: cargo flamegraph --profile=${profile:-bench-with-debug} --bench ${bench:-${PROJECT_NAME}_benchmarks} -p ${PROJECT_NAME} -- --bench --profile-time=${profile_time:-5}
+
+env:
+  overrides:
+    DHAT: yes
