--- a/cargo/.config.toml
+++ b/cargo/.config.toml
@@ -9,10 +9,10 @@ codegen-backend = "cranelift"
 # ORT_LIB_LOCATION = { value = "vendor/lib", relative = true }
 
 [target.x86_64-unknown-linux-gnu]
-rustflags = ["-C", "link-arg=-fuse-ld=mold"]
+rustflags = ["-Clink-arg=-fuse-ld=mold", "-Clink-arg=-Wl,--no-rosegment"]
 
 [target.aarch64-unknown-linux-gnu]
-rustflags = ["-C", "link-arg=-fuse-ld=mold"]
+rustflags = ["-Clink-arg=-fuse-ld=mold", "-Clink-arg=-Wl,--no-rosegment"]
 build-std = ["std", "core", "alloc", "proc_macro"]
 
 [target.x86_64-pc-windows-msvc]
