--- a/omni/presets/rust-lib.omni.yaml
+++ b/omni/presets/rust-lib.omni.yaml
@@ -4,6 +4,8 @@ name: rust-lib
 tasks:
   test: cargo test -p ${PROJECT_NAME}
 
+  bench: cargo bench -p ${PROJECT_NAME}
+
   build:
     command: cargo build --release --package ${PROJECT_NAME}
     dependencies:
