--- a/omni/presets/rust-lib.omni.yaml
+++ b/omni/presets/rust-lib.omni.yaml
@@ -6,6 +6,9 @@ tasks:
 
   bench: cargo bench -p ${PROJECT_NAME}
 
+  profile:
+    command: cargo flamegraph --profile=${profile:-bench-with-debug} --bench ${bench:-${PROJECT_NAME}_benchmarks} -p ${PROJECT_NAME} -- --bench --profile-time=${profile_time:-5}
+
   build:
     command: cargo build --release --package ${PROJECT_NAME}
     dependencies:
