--- a/cli/omni/Cargo.toml
+++ b/cli/omni/Cargo.toml
@@ -66,6 +66,7 @@ globwalk = { workspace = true }
 maps = { workspace = true }
 sets = { workspace = true }
 dhat = { workspace = true, optional = true }
+enum-map = { workspace = true }
 
 [build-dependencies]
 shadow-rs = { workspace = true, features = ["default"] }
