--- a/crates/bridge_rpc/project.omni.yaml
+++ b/crates/bridge_rpc/project.omni.yaml
@@ -2,4 +2,4 @@
 name: bridge_rpc
 
 extends:
-  - ${WORKSPACE_DIR}/omni/presets/rust-lib.omni.yaml
+  - "@workspace/omni/presets/rust-lib.omni.yaml"
