--- a/crates/config_utils/project.omni.yaml
+++ b/crates/config_utils/project.omni.yaml
@@ -2,4 +2,4 @@
 name: config_utils
 
 extends:
-  - ${WORKSPACE_DIR}/omni/presets/rust-lib.omni.yaml
+  - "@workspace/omni/presets/rust-lib.omni.yaml"
