--- a/Cargo.toml
+++ b/Cargo.toml
@@ -115,6 +115,8 @@ globwalk = { version = "^0.9.1" }
 criterion = { version = "^0.7.0", features = ["html_reports"] }
 dhat = { version = "^0.3.3" }
 enum-map = { version = "^2.7.3" }
+portable-pty = { version = "^0.9.0" }
+terminal_size = { version = "^0.4.2" }
 
 [profile.release]
 incremental = true
