--- a/crates/dir_walker/Cargo.toml
+++ b/crates/dir_walker/Cargo.toml
@@ -12,14 +12,17 @@ homepage.workspace = true
 path = "src/lib.rs"
 
 [features]
-default = []
-full = ["ignore", "recursive", "memory"]
+default = ["full"]
+full = ["ignore", "recursive", "memory", "glob"]
 ignore = ["dep:ignore"]
 recursive = ["dep:walkdir"]
 memory = []
+glob = ["ignore", "dep:globset"]
 
 [dependencies]
 ignore = { workspace = true, optional = true }
 walkdir = { workspace = true, optional = true }
 derive_more = { workspace = true }
 thiserror = { workspace = true }
+derive_builder = { workspace = true }
+globset = { workspace = true, optional = true }
