--- a/Cargo.toml
+++ b/Cargo.toml
@@ -117,6 +117,12 @@ dhat = { version = "^0.3.3" }
 enum-map = { version = "^2.7.3" }
 portable-pty = { version = "^0.9.0" }
 terminal_size = { version = "^0.4.2" }
+rmcp = { version = "^0.4.0", features = ["server", "macros"] }
+rs_merkle = { version = "^1.5.0" }
+omni_cache = { path = "./crates/omni_cache" }
+omni_hasher = { path = "./crates/omni_hasher" }
+derive_builder = { version = "^0.20.2" }
+blake3 = { version = "^1.8.2" }
 
 [profile.release]
 incremental = true
