--- a/Cargo.toml
+++ b/Cargo.toml
@@ -123,6 +123,9 @@ omni_cache = { path = "./crates/omni_cache" }
 omni_hasher = { path = "./crates/omni_hasher" }
 derive_builder = { version = "^0.20.2" }
 blake3 = { version = "^1.8.2" }
+faster-hex = { version = "^0.10.0" }
+tempfile = { version = "^3.20.0" }
+bs58 = { version = "^0.5.1" }
 
 [profile.release]
 incremental = true
