--- a/crates/omni_cache/Cargo.toml
+++ b/crates/omni_cache/Cargo.toml
@@ -18,9 +18,17 @@ strum = { workspace = true }
 serde = { workspace = true }
 bincode = { workspace = true }
 dir_walker = { workspace = true }
-system_traits = { workspace = true }
+system_traits = { workspace = true, features = [
+    "real-async-tokio",
+    "real-sync",
+] }
 derive-new = { workspace = true }
 derive_builder = { workspace = true }
 omni_hasher = { workspace = true }
 futures = { workspace = true }
 rs_merkle = { workspace = true }
+bs58 = { workspace = true }
+
+[dev-dependencies]
+tempfile = { workspace = true }
+tokio = { workspace = true }
