--- a/omni/presets/rust-lib.omni.yaml
+++ b/omni/presets/rust-lib.omni.yaml
@@ -2,8 +2,10 @@
 name: rust-lib
 
 cache_key:
-  env: ["PROJECT_NAME", "PROJECT_DIR"]
-  files: ["Cargo.toml", "{WORKSPACE_DIR}/Cargo.toml"]
+  files: ["Cargo.toml", "@workspace/Cargo.toml"]
+
+extends:
+  - "@workspace/omni/presets/base.omni.yaml"
 
 tasks:
   test: cargo test -p ${PROJECT_NAME}
