--- a/Cargo.toml
+++ b/Cargo.toml
@@ -87,7 +87,7 @@ config_utils = { path = "./crates/config_utils" }
 js_runtime = { path = "./crates/js_runtime" }
 toml = { version = "^0.9.2" }
 uuid = { version = "^1.17.0", features = ["v4", "v7", "serde"] }
-url = { version = "^2.5.4" }
+url = { version = "^2.5.4", features = ["serde"] }
 parking_lot = { version = "^0.12.4" }
 bincode = { version = "^2.0.1", features = ["serde"] }
 notify = { version = "^8.1.0" }
@@ -117,7 +117,7 @@ dhat = { version = "^0.3.3" }
 enum-map = { version = "^2.7.3" }
 portable-pty = { version = "^0.9.0" }
 terminal_size = { version = "^0.4.2" }
-rmcp = { version = "^0.4.0", features = ["server", "macros"] }
+rmcp = { version = "^0.5.0", features = ["server", "macros"] }
 rs_merkle = { version = "^1.5.0" }
 omni_cache = { path = "./crates/omni_cache" }
 omni_hasher = { path = "./crates/omni_hasher" }
@@ -126,6 +126,7 @@ blake3 = { version = "^1.8.2" }
 faster-hex = { version = "^0.10.0" }
 tempfile = { version = "^3.20.0" }
 bs58 = { version = "^0.5.1" }
+yoke = { version = "^0.8.0" }
 
 [profile.release]
 incremental = true
