feat: support OmniPath in caching

--- a/crates/omni_cache/Cargo.toml
+++ b/crates/omni_cache/Cargo.toml
@@ -31,6 +31,7 @@ bs58 = { workspace = true }
 url = { workspace = true }
 maps = { workspace = true }
 yoke = { workspace = true }
+omni_types = { workspace = true, features = ["serde"] }
 
 [dev-dependencies]
 tempfile = { workspace = true }
