feat: support get_many and cache_many operation

--- a/crates/omni_cache/Cargo.toml
+++ b/crates/omni_cache/Cargo.toml
@@ -33,6 +33,8 @@ url = { workspace = true }
 maps = { workspace = true }
 yoke = { workspace = true }
 omni_types = { workspace = true, features = ["serde"] }
+byteorder = { workspace = true }
+globset = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
