--- a/cli/omni/Cargo.toml
+++ b/cli/omni/Cargo.toml
@@ -71,6 +71,10 @@ portable-pty = { workspace = true }
 terminal_size = { workspace = true }
 rmcp = { workspace = true }
 omni_cache = { workspace = true }
+omni_hasher = { workspace = true }
+derive_builder = { workspace = true }
+bs58 = { workspace = true }
+ahash = { workspace = true }
 
 [build-dependencies]
 shadow-rs = { workspace = true, features = ["default"] }
