--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ serde_json = { version = "^1.0.142" }
 trace = { path = "./crates/trace" }
 tracing = { version = "^0.1.41" }
 tracing-core = { version = "^0.1.34" }
-tracing-subscriber = { version = "^0.3.19" }
+tracing-subscriber = { version = "^0.3.19", features = ["json"] }
 tracing-serde = { version = "^0.2.0" }
 futures = { version = "^0.3.31" }
 thiserror = "^2.0.12"
