--- a/omni/presets/rust-lib.omni.yaml
+++ b/omni/presets/rust-lib.omni.yaml
@@ -5,7 +5,11 @@ cache:
   enabled: true
   key:
     defaults: true
-    files: ["Cargo.toml", "@workspace/Cargo.toml", "./src/**/*.rs"]
+    files:
+      - "Cargo.toml"
+      - "@workspace/Cargo.toml"
+      - "@workspace/Cargo.lock"
+      - "./src/**/*.rs"
 
 extends:
   - "@workspace/omni/presets/base.omni.yaml"
